--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
           <div class="flex-group">
             <p class="product__price">
-              <span class="visually-hidden">Current Price</span>$149.99
+              <span class="visually-hidden">Current Price</span>R149.99
             </p>
             <p class="product__original-price">
               <span class="visually-hidden">Original Price</span>
-              <s>$169.99</s>
+              <s>R169.99</s>
             </p>
           </div>
           <button class="button" data-icon="shopping-cart">Add to Cart</button>
